--- a/public/css/base/tokens.css
+++ b/public/css/base/tokens.css
@@ -1,8 +1,9 @@
 :root {
 	--border-divider: 0.0625rem solid var(--color-border-divider);
 	--border-interactive: 0.0625rem solid var(--color-border-interactive);
-
 	--border-radius: 0.25rem;
+
+	--outline-focus: 0.125rem solid var(--color-outline-focus);
 
 	color-scheme: light dark;
 }
@@ -12,6 +13,7 @@
 		--color-background: hsl(200deg 30% 95%);
 		--color-border-divider: hsl(200deg 30% 80%);
 		--color-border-interactive: hsl(200deg 30% 40%);
+		--color-outline-focus: hsl(40deg 90% 50%);
 	}
 }
 
@@ -20,5 +22,6 @@
 		--color-background: hsl(200deg 30% 15%);
 		--color-border-divider: hsl(200deg 30% 20%);
 		--color-border-interactive: hsl(200deg 30% 40%);
+		--color-outline-focus: hsl(40deg 90% 50%);
 	}
 }
