--- a/public/css/components/footer.css
+++ b/public/css/components/footer.css
@@ -2,7 +2,3 @@
 	background: var(--color-background);
 	padding-block: 2rem;
 }
-
-.Footer a {
-	color: currentcolor;
-}
