--- a/public/css/components/header.css
+++ b/public/css/components/header.css
@@ -2,7 +2,3 @@
 	background: var(--color-background);
 	padding-block: 1rem;
 }
-
-.Header a {
-	color: currentcolor;
-}
